--- a/www/index.html
+++ b/www/index.html
@@ -7,39 +7,82 @@
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script type="text/javascript">
 $(function() {
+	var	sensor_series  = [],
+		temperature_series = [],
+		humidity_series    = [],
+		pressure_series    = [],
+		sensor_names   = ['inside', 'outside'],
+		sensor_counter = 0;
 
-	$.get('temperature.json', function(data) {
-//		var json = $.parseJSON(data);
-		var json = data;
-		var chart_data = []
-		for(var i = 0; i < json.length; i++) {
-			chart_data.push([
-				json[i][0]*1000,
-				json[i][1]]);
-		}
-		create_chart(chart_data);
+
+	$.each(sensor_names, function(i, sensor_name) {
+		$.getJSON(sensor_name+'.json',	function(data) {
+//		$.get(sensor_name+'.json', function(data) {
+////			var json = $.parseJSON(data);
+//			var json = data;
+//			var chart_data = []
+//			for(var i = 0; i < json.length; i++) {
+//				chart_data.push([
+//					json[i][0]*1000,
+//					json[i][1]]);
+//			}
+
+			var temperature_data = [];
+			var humidity_data    = [];
+			var pressure_data    = [];
+			for (var j = 0; j < data.length; j++) {
+				temperature_data.push([data[j][0], data[j][1]]);
+        		humidity_data   .push([data[j][0], data[j][2]]);
+        		pressure_data   .push([data[j][0], data[j][3]]);
+			}
+
+			temperature_series[i] = {
+				name: sensor_name,
+//				data: chart_data
+//				data: data
+				data: temperature_data
+//				tooltip: {
+//					valueDecimals: 2
+//				}
+			};
+			humidity_series[i] = {
+				name: sensor_name,
+				data: humidity_data
+//				tooltip: {
+//					valueDecimals: 2
+//				}
+			};
+			pressure_series[i] = {
+				name: sensor_name,
+				data: pressure_data
+//				tooltip: {
+//					valueDecimals: 2
+//				}
+			};
+
+			// data is loaded asynchronously
+			// counter to check when all data is loaded
+			sensor_counter++;
+			if (sensor_counter == sensor_names.length) {
+				create_chart(temperature_series, 'Temperature');
+				create_chart(humidity_series   , 'Humidity');
+				create_chart(pressure_series   , 'Pressure');
+			}
+		});
 	});
 
-//	$.get('humidity.json', function(data) {
-////		var json = $.parseJSON(data);
-//		var json = data;
-//		var chart_data = []
-//		for(var i = 0; i < json.length; i++) {
-//			chart_data.push([
-//				json[i][0]*1000,
-//				json[i][1]]);
-//		}
-//		create_chart(chart_data);
-//	});
 
-	function create_chart(data) {
+	function create_chart(series, container) {
 		Highcharts.setOptions({
 			global: {
 				useUTC: false
 			}
 		});
-		$('#container').highcharts('StockChart', {
-			
+
+		$('#'+container).highcharts('StockChart', {
+
+		    chart: {
+		    },
 
 			rangeSelector: {
 				buttons: [{
@@ -67,16 +110,15 @@ $(function() {
 			},
 
 			title : {
-				text : 'Temperature'
+				text : container
 			},
 			
-			series : [{
-				name : 'Temperature',
-				data : data,
-				tooltip: {
-					valueDecimals: 2
-				}
-			}]
+		    tooltip: {
+		    	pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y}</b> ({point.change}%)<br/>',
+		    	valueDecimals: 2
+		    },
+		    
+			series : series
 		});
 	}
 });
@@ -87,6 +129,8 @@ $(function() {
 <script src="js/highstock.js"></script>
 <script src="js/modules/exporting.js"></script>
 
-<div id="container" style="height: 500px; min-width: 500px"></div>
+<div id="Temperature" style="height: 500px; min-width: 500px"></div>
+<div id="Humidity" style="height: 500px; min-width: 500px"></div>
+<div id="Pressure" style="height: 500px; min-width: 500px"></div>
 	</body>
 </html>
